Changes to publishPost page
also added a file to blog post, but need to change it to JSON

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,7 @@ section img {
 /*styling for blog data input on publishPage.html*/
 
 form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     padding: 1.00em;
     background-color: var(--secondary-bg-color);
 }
